<resources>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Mini Zendo</string>
    <string name="second_fragment_label">Mini Zendo</string>
    <string name="mini_zendo">Mini Zendo</string>
    <!-- Strings for operating the application -->
    <string name="app_name">Mini Zendo</string>
    <string name="app_version">2.0</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="set_sitting_time">Set Sitting Time</string>
    <string name="single_hour">hour</string>
    <string name="single_minute">minute</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="one_hour_label">1 hour</string>
    <string name="n_hours_label">%d hours</string>
    <string name="one_minute_label">1 min</string>
    <string name="n_minutes_label">%d min</string>
    <string name="save">SAVE</string>
    <string name="zero_time">00:00</string>
    <string name="time_error">This will not work!</string>
    <string name="invalid_time">Please choose a valid session time.\nEven though this is Zen, no time is not a time :)</string>
    <string name="wanna_delete">Do you want to remove this session from the list?</string>
    <string name="delete">Delete Session?</string>
    <string name="session_deleted">Session Deleted!</string>
    <string name="yes">YES</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="already_session">You already have a session in the list with this duration</string>
    <string name="duplicate">Duplicate Session</string>
    <string name="no_change">No change&#x2026;</string>
    <string name="session">Zazen Time&#x2026;</string>
    <string name="timing_result">%1$s:%2$s</string>
    <string name="press_to_add">Press + button below to add session (6 maximum)</string>
    <string name="plus_description">This is the plus sign to add session</string>
    <string name="session_list">Session List</string>
    <string name="welcome_tagline">A simple meditation timer for your practice.</string>
    <string name="welcome_title">Welcome to Mini Zendo</string>
    <string name="feature_create_title">Create a Session</string>
    <string name="feature_create_body">Tap the + button to add a new meditation timer with your preferred duration.</string>
    <string name="feature_start_title">Start Meditating</string>
    <string name="feature_start_body">Tap any session from your list to begin. A circular timer will track your progress.</string>
    <string name="feature_complete_title">Session Complete</string>
    <string name="feature_complete_body">A bell sounds when your session ends, followed by an inspiring Zen quote.</string>
    <string name="feature_remove_title">Remove Sessions</string>
    <string name="feature_remove_body">Swipe left on any session to remove it from your list.</string>
    <string name="back">Back</string>
    <string name="quotes_credit">Quotes by Shunryū Suzuki and Thich Nhat Hanh</string>
</resources>