<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zenColor"
    android:orientation="vertical"
    tools:context="com.marhabweb.minizendo.AddSessionActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_sitting_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownId" />

    <com.marhabweb.minizendo.TimePicker
        android:id="@+id/npMinutes"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:background="@color/zenColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/npHours"
        app:layout_constraintTop_toBottomOf="@+id/minsText" />


    <com.marhabweb.minizendo.TimePicker
        android:id="@+id/npHours"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/zenColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pageTitle"
        app:layout_constraintTop_toBottomOf="@+id/hoursText"
        tools:ignore="UnknownId" />


    <TextView
        android:id="@+id/hoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/hours"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pageTitle"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
        tools:text="hours" />

    <TextView
        android:id="@+id/minsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/minutes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pageTitle"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
        tools:text="minutes" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="41dp"
        android:background="@android:color/black"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/npHours" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:srcCompat="@drawable/torii_bkg" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />


</android.support.constraint.ConstraintLayout>
